syntax = "proto3";
option java_multiple_files = true;

package org.greekleanersinc.servicetemplate;
import "google/protobuf/empty.proto";

message RequestById {
  uint64 id = 1;
}
message RequestCreate {
  uint64 id = 1;
  string text = 2;
}
message ServiceData {
  uint64 id = 1;
  string text = 2;
}

message Response {
  ServiceData responseData = 1;
}

service TemplateService {
  rpc findTemplate(RequestById) returns (Response);
  rpc findAll(google.protobuf.Empty) returns (stream Response);
  rpc createTemplate(RequestCreate) returns (Response);
  rpc updateTemplate(RequestCreate) returns (Response);
  rpc delete(RequestById) returns (google.protobuf.Empty);

}